# fileview

./: .gitignore  .skill  CHANGELOG.md  CHANGELOG_ja.md  CONTRIBUTING.md  CONTRIBUTING_ja.md  Cargo.toml  README.md  README_ja.md  clippy.toml  rustfmt.toml  score.md  思想.md
.cargo/: audit.toml
.claude/skills/release-workflow/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
data/: autopilot_state.json  market_snapshot.json
docs/: AUTOPILOT_LOOP.md  BENCHMARKS.md  BENCHMARKS_ja.md  BRANCHING_MODEL.md  CLAUDE_CODE.md  CLAUDE_CODE_ja.md  COMMANDS.md  COMMANDS_ja.md  COMPARISON.md  COMPARISON_ja.md  COMPETITIVE_SCORECARD.md  CONFIGURATION.md  CONFIGURATION_ja.md  DESIGN.md  DESIGN_ja.md  DEVELOPMENT_HISTORY.md  FUTURE_TASKS.md  KEYBINDINGS.md  KEYBINDINGS_ja.md  MARKET_ANALYSIS.md  PLUGINS.md  PLUGINS_ja.md  RELEASE_POLICY.md  RELEASE_POLICY_ja.md  ROADMAP.md  ROADMAP_V4.md  SECURITY.md  SECURITY_ja.md  STABILITY.md  STABILITY_ja.md  THEMES.md  THEMES_ja.md
examples/: config.toml  debug_events.rs  keymap.toml  theme.toml
examples/plugins/: README.md  README_ja.md  claude_code.lua  git_actions.lua  productivity.lua
scripts/: ai_growth_loop.sh  autopilot_loop.py  growth_loop_status.sh  install_growth_loop_launchd.sh  install_main_guard_hook.sh  uninstall_growth_loop_launchd.sh
scripts/tasks/: sync_competitive_scorecard.py
src/: error.rs  lib.rs  main.rs
src/action/: clipboard.rs  file.rs  mod.rs
src/app/: config.rs  config_file.rs  event_loop.rs  image_loader.rs  mod.rs  preview.rs  render.rs  video.rs
src/core/: mod.rs  mode.rs  state.rs  tab.rs
src/git/: diff.rs  mod.rs  operations.rs  status.rs
src/handler/: action.rs  hooks.rs  key.rs  keymap.rs  mod.rs  mouse.rs
src/handler/action/: bookmark.rs  bulk_rename.rs  command.rs  display.rs  file_ops.rs  filter.rs  git_ops.rs  input.rs  mod.rs  navigation.rs  search.rs  selection.rs  tests.rs  tree_ops.rs
src/integrate/: benchmark.rs  callback.rs  claude_init.rs  context.rs  context_pack.rs  mod.rs  pick.rs  plugin_cmd.rs  related.rs  session.rs  tree.rs
src/mcp/: handlers.rs  mod.rs  registry.rs  security.rs  server.rs  token.rs  types.rs
src/mcp/handlers/: analysis.rs  context.rs  dependency.rs  file.rs  git.rs  mod.rs  project.rs
src/plugin/: api.rs  lua.rs  mod.rs
src/render/: bulk_rename.rs  fuzzy.rs  history.rs  icons.rs  image.rs  iterm2.rs  kitty.rs  layout.rs  mod.rs  preview.rs  sixel.rs  status.rs  tabs.rs  terminal.rs  theme.rs  tree.rs
src/render/preview/: archive.rs  common.rs  custom.rs  diff.rs  directory.rs  hex.rs  image.rs  mod.rs  pdf.rs  text.rs  video.rs
src/tree/: mod.rs  navigator.rs  node.rs
src/watcher/: mod.rs
tasks/: queue.json
tests/: integration.rs
tests/e2e/: bulk_rename.rs  cli_basic.rs  config_cli.rs  git_ops.rs  main.rs  pick_mode.rs  stdin_mode.rs
