[package]
name = "fileview"
version = "1.21.0"
edition = "2021"
description = "A minimal file tree UI for terminal emulators"
authors = ["Hiro-Chiba"]
license = "MIT"
repository = "https://github.com/Hiro-Chiba/fileview"
readme = "README.md"
keywords = ["tui", "file-browser", "terminal", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "fv"
path = "src/main.rs"

[features]
default = []
# Enable Chafa fallback for better image quality on terminals without native protocol support
# Requires libchafa (>= 1.8.0) to be installed: brew install chafa (macOS) or apt install libchafa-dev (Linux)
chafa = ["ratatui-image/chafa-dyn"]

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
anyhow = "1.0"
toml = "0.8"
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
arboard = "3.4"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
ratatui-image = { version = "10.0.4", default-features = false, features = ["image-defaults", "crossterm"] }
nucleo-matcher = "0.3"
notify = "8.2"
notify-debouncer-mini = "0.6"
zip = "2.4"
tar = "0.4"
flate2 = "1.0"
trash = "5"
tempfile = "3"
syntect = "5"
mlua = { version = "0.10", features = ["lua54", "vendored"] }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[profile.release]
lto = true
strip = true
opt-level = "z"
codegen-units = 1
