[package]
name = "fileview"
version = "2.3.0"
edition = "2021"
rust-version = "1.90.0"  # MSRV - Minimum Supported Rust Version
description = "A minimal file tree UI for terminal emulators"
authors = ["Hiro-Chiba"]
license = "MIT"
repository = "https://github.com/Hiro-Chiba/fileview"
readme = "README.md"
keywords = ["tui", "file-browser", "terminal", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "fv"
path = "src/main.rs"

[features]
default = []
# Enable Chafa fallback for better image quality on terminals without native protocol support
# Requires libchafa (>= 1.8.0) to be installed: brew install chafa (macOS) or apt install libchafa-dev (Linux)
chafa = ["ratatui-image/chafa-dyn"]

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
anyhow = "1.0"
toml = "0.8"
dirs = "6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
arboard = "3.4"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp", "bmp"] }
ratatui-image = { version = "10.0.5", default-features = false, features = ["crossterm"] }
nucleo-matcher = "0.3"
notify = "8.2"
notify-debouncer-mini = "0.6"
zip = "7.2"
tar = "0.4"
flate2 = "1.1"
trash = "5"
tempfile = "3"
syntect = "5"
mlua = { version = "0.11", features = ["lua54", "vendored"] }
regex = "1"
# v2.0 additions
thiserror = "2"          # Unified error types
petgraph = "0.6"         # Dependency graph analysis
tiktoken-rs = "0.9"      # Token estimation for AI context

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[profile.release]
lto = true
strip = true
opt-level = "z"
codegen-units = 1
